# cookbook

./: .gitignore  pyproject.toml
.github/workflows/: static.yml
recipes/: creamy-pasta-with-peas-and-ham.yaml  italian-bean-vegetable-soup.yaml
src/cookbook/: __init__.py  _types.py  generate.py  main.py  parse.py
templates/: home.html  recipe.html
www/: creamy-pasta-with-peas-and-ham.html  recipes.css  script.js
